--- a/pod1.yml
+++ b/pod1.yml
@@ -1,12 +1,19 @@
-apiVersion: v1 # String
-kind: Pod  # String
-metadata: # Dictionary
-  name: myapp-pod
-  labels: # Dictionary 
-    app: myapp         
+apiVersion: apps/v1
+kind: ReplicaSet
+metadata:
+  name: my-helloworld-rs
+  labels:
+    app: my-helloworld
 spec:
-  containers: # List
-    - name: myapp
-      image: stacksimplify/kubenginx:1.0.0
-      ports:
-        - containerPort: 80
+  replicas: 4
+  selector:
+    matchLabels:
+      app: my-helloworld
+  template:
+    metadata:
+      labels:
+        app: my-helloworld
+    spec:
+      containers:
+      - name: my-helloworld-app
+        image: stacksimplify/kube-helloworld:1.0.0
